--- a/weather.html
+++ b/weather.html
@@ -28,7 +28,7 @@
     async function getWeather() {
         const infoDiv = document.getElementById('weather-info');
         const apiKey = '41a241f138b8c62b82be1f1ea4b9afec'; // *** อย่าลืมนำ API Key ของคุณมาใส่ที่นี่ ***
-        const city = 'Bangkok';
+        const city = 'ubon ratchathani';
         const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&units=metric&appid=${apiKey}`;
 
         try {
